<resources>
    <string name="app_name">Project Euler [Unofficial]</string>
    <string name="connecting_server">connecting with server</string>
    <string name="blank" />
    <string name="ready">getting you ready</string>
    <string name="based_on">Based On</string>
    <string name="number">Number</string>
    <string name="recent">Recent</string>
    <string name="difficulty">Difficulty</string>
    <string name="solved_by">Solved By</string>
    <string name="number_heading">Based on Number</string>
    <string name="recent_heading">Recent Problems</string>
    <string name="difficulty_heading">Based on Difficulty</string>
    <string name="solved_by_heading">Based on Solved By</string>

    <!--fonts-->
    <string name="font_name_poiretone">poiretone</string>
    <string name="font_name_arimo_madurai">arimamadurai</string>
    <string name="list_by">List By</string>
    <string name="id_deno">problem 888</string>
    <string name="problem_demo">Loreum Ipsum Demo Text</string>
    <string name="news">news</string>
    <!--end of fonts-->

    <!--nav drawer strings-->

    <string name="nav_drawer_opened">drawer opened</string>
    <string name="nav_drawer_closed">drawer closed</string>
    <string name="action_settings">Settings</string>
    <string name="col1">Home</string>
    <string name="col2">Recent Problems</string>
    <string name="col3">Serialized Questions</string>
    <string name="col4">Difficulty Based</string>
    <string name="col5">News</string>
    <string name="col6">About Project Euler</string>
    <string name="col7">About App</string>
    <string name="col8">last update:</string>
    <string name="footer_top">Project Euler v0.0.1</string>
    <string name="footer_bottom">Created @ panda apps</string>

    <!--end of nav drawer-->


</resources>
