<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/col1"
        android:icon="@drawable/icon_home"
        android:title="@string/col1"/>
    <item
        android:id="@+id/col2"
        android:icon="@drawable/icon_number"
        android:title="@string/col2"/>
    <item
        android:id="@+id/col3"
        android:icon="@drawable/icon_letter"
        android:title="@string/col3"/>
    <item
        android:id="@+id/col4"
        android:icon="@drawable/icon_difficulty"
        android:title="@string/col4"/>

    <item
        android:id="@+id/col5"
        android:icon="@drawable/icon_news"
        android:title="@string/col5"/>

    <item
        android:id="@+id/col6"
        android:icon="@drawable/icon_math"
        android:title="@string/col6"/>
    <item
        android:id="@+id/col7"
        android:icon="@drawable/icon_about"
        android:title="@string/col7"/>

    <item
        android:id="@+id/col8"
        android:icon="@drawable/icon_update"
        android:title="@string/col8"/>
</menu>