<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:gravity="center"
            app:theme="@style/MainActionBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="60sp"
                >

                <!--<ImageView-->
                    <!--android:id="@+id/imageTOp"-->
                    <!--android:layout_width="40dp"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:src="@drawable/logo"-->
                    <!--/>-->

                <online.pandaapps.gre.projecteuler.Utils.Fonts.CustomFontTV
                    android:id="@+id/textTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:font="@string/font_name_arimo_madurai"
                    android:text="@string/app_name"
                    />

            </RelativeLayout>




        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/activity_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="250sp"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_base"
        app:theme="@style/drawer_theme">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_above="@+id/footerTop"
                android:src="@drawable/panda"
                android:alpha="0.8"
                android:layout_centerHorizontal="true"
                android:layout_width="100sp"
                android:layout_height="100sp" />
            <online.pandaapps.gre.projecteuler.Utils.Fonts.CustomFontTV
                android:id="@+id/footerTop"
                android:text="@string/footer_top"
                android:layout_above="@+id/footerBottom"
                android:layout_alignParentBottom="false"
                app:font="@string/font_name_arimo_madurai"
                style="@style/tvNavFooter"
                />
            <online.pandaapps.gre.projecteuler.Utils.Fonts.CustomFontTV
                android:id="@+id/footerBottom"
                style="@style/tvNavFooter"
                android:text="@string/footer_bottom"
                app:font="@string/font_name_arimo_madurai"
                />
        </RelativeLayout>
</android.support.design.widget.NavigationView>
    <!--app:headerLayout="@layout/nav_header"-->
</android.support.v4.widget.DrawerLayout>