<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context="online.pandaapps.gre.projecteuler.Euler.SingleProblem">

    <android.support.v7.widget.CardView
        android:id="@+id/problemTitleAndID"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="100sp"
        android:thicknessRatio="1.9"
        android:layout_margin="2sp"
        android:layout_weight="1.7"
        android:layout_height="0sp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <online.pandaapps.gre.projecteuler.Utils.Fonts.CustomFontTV
                android:id="@+id/problemIdIndi"
                android:text="@string/id_deno"
                android:layout_below="@+id/problemTitleIndi"
                style="@style/tvQuestionList"
                android:textColor="@color/secondary_text"
                app:font="@string/font_name_arimo_madurai"
                />

            <online.pandaapps.gre.projecteuler.Utils.Fonts.CustomFontTV
                android:id="@+id/problemTitleIndi"
                android:text="@string/problem_demo"
                android:layout_marginTop="4sp"
                style="@style/tvQuestionList"
                android:textSize="25sp"
                app:font="@string/font_name_arimo_madurai"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/problemQuestoion"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="100sp"
        android:layout_weight="8.3"
        android:thicknessRatio="1.9"
        android:layout_margin="2sp"
        android:layout_height="0sp">

        <TextView
            android:id="@+id/problemQuest"
            android:layout_margin="5sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:scrollbars="vertical"
            android:fontFamily="sans-serif-thin"
            />

    </android.support.v7.widget.CardView>

</LinearLayout>
